build(root): reduced size of icds-pages-data.json
since icds-pages-data.json is now only needed to render the component gallery, have adjusted the
settings to only gather component pages, reducing the size of the file

--- a/mdx-to-json-settings.json
+++ b/mdx-to-json-settings.json
@@ -1,10 +1,10 @@
 {
   "name": "icds-guidance-pages",
   "cwd": "./",
-  "src": "./src/content/structured/",
-  "filePattern": "**/*.mdx",
+  "src": "./src/content/structured/components",
+  "filePattern": "**/guidance.mdx",
   "dist": "src/icds-pages-data.json",
-  "metadata": true,
+  "metadata": false,
   "server": false,
   "port": 3001,
   "deterministicOrder": false
